2008-04-08  Eric B. Weddington  <eric.weddington@atmel.com>

	Fix for bug #22877:
	* include/avr/iox128a1.h: Fix fuse information.
	* include/avr/iox64a1.h: Ditto.
	* NEWS: Add to fixed bug list.

2008-04-07  Eric B. Weddington  <eric.weddington@atmel.com>

	* include/avr/iom328p.h: Fix SPM_PAGESIZE.
	* include/avr/iom88p.h: Ditto.
	* include/avr/iom48p.h: Ditto.

2008-04-07  Eric B. Weddington  <eric.weddington@atmel.com>

	Fix for bug #22870.
	* include/avr/wdt.h: Add support for ATmega164P, ATmega324P, ATmega644P.
	Rearrange condition list to alphabetical order.
	* NEWS: Add to fixed bug list.

2008-04-05  Dmitry Xmelkov  <dmix@gmail.ru>

	* tests/simulate/runtest.sh: Add support of .eeprom section. Add
	check of simulavr's runtime errors.
	* tests/simulate/regression/20080405-eeprom.c: New file.

2008-04-04  Eric B. Weddington

	Fix for bug #22834.
	* include/iomxx4.h: Add BOD and BODSE bit definitions.
	* NEWS: Add to fixed bug list.

2008-04-04  Dmitry Xmelkov  <dmix@gmail.ru>

	Fix for bug #22828.
	* include/avr/eeprom.h: Restore old args order of eeprom_write_block()
	function: place source address to left. This revertion at Marth 2008
	was an accidental error.
	* tests/simulate/avr/eeprom-1.c: Ditto.
	* tests/simulate/regression/bug-22828.c: New file.
	* NEWS: Add to fixed bug list.

2008-04-03  Dmitry Xmelkov  <dmix@gmail.ru>

	* tests/simulate/regression/bug-22800.c: New file.

2008-04-02  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* configure.ac: Bump version to post-1.6.2.

2008-04-02  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Released avr-libc-1.6.2

2008-04-02  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* configure.ac: Bump version to 1.6.2.

2008-04-01  Eric B. Weddington  <eric.weddington@atmel.com>

	* include/avr/iom32u4.h: Add UEBCX 16-bit register. This is not 
	defined as per the datasheet or XML file. However, in talking with
	the USB team, the contents of the registers are supposed to be read-only 